Uploaded image for project: 'Mesos'
  1. Mesos
  2. MESOS-8619

Docker on Windows uses USERPROFILE instead of HOME for credentials

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 1.5.0
    • 1.5.1, 1.6.0
    • None
    • Windows 10 with Docker version 17.12.0-ce, build c97c6d6.

    Description

      The logic for doing a docker pull of an image for a private registry assumes that the .docker/config.json is to be found in $HOME (according to the Mesosphere instructions and the code).

      However, this assumption was only true for Linux per the Docker code, but on Windows, Docker explicitly looks at the USERPROFILE environment variable, again per the Docker code.

      So in order for Docker to pick up the config file correctly, we need to change the variable used on Windows in the Docker containerizer.

      Attachments

        Activity

          People

            andschwa Andrew Schwartzmeyer
            andschwa Andrew Schwartzmeyer
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: